[project]
name = "opsai-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
]
